# beacony

./: Makefile.am  Makefile.in  README  TODO  beaconwriter.py  beacony.spec.in  config.h.in  configure  configure.ac
.pc/: applied-patches
beacony/: Makefile.am  Makefile.in  ax25dump.c  beacony.1  beacony.c  kissdump.c  utils.c
debian/: changelog  config  control  copyright  manpages  menu  newtemplate  postinst  rules  templates  undocumented  watch
debian/patches/: Pre-quilt-changes
debian/po/: cs.po  da.po  de.po  es.po  fr.po  gl.po  it.po  ja.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sv.po  vi.po
